[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
characterpy = ["Characters/**/*", "Stats/**/*", "*.json", "*.txt"]

[project]
name = "characterpy"          # must be unique on PyPI
version = "0.1.0"
description = "Python in house 5E character builder and display"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name="AlexLovesEggos"}]
